hphp/hack/test/typecheck/let/let_foreach.php.exp
File "let_foreach.php", line 7, characters 8-8:
Unbound name: x (a global constant) (Naming[2049])
